<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_all"
            android:title="@string/menu_all" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_category"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_give_ad"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_give_ad" />

        <item
            android:id="@+id/nav_about_app"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about_app" />

        <item
            android:id="@+id/nav_developers"
            android:icon="@drawable/ic_developers"
            android:title="@string/menu_developers" />
    </group>
</menu>