<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all">

    <fragment
        android:id="@+id/nav_all"
        android:name="com.example.karakolbazary.ui.all.allFragment"
        android:label="@string/menu_all"
        tools:layout="@layout/fragment_all" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.karakolbazary.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_give_ad"
        android:name="com.example.karakolbazary.ui.give_ad.GiveAdFragment"
        android:label="@string/menu_give_ad"
        tools:layout="@layout/fragment_give_ad" />

    <fragment
        android:id="@+id/nav_about_app"
        android:name="com.example.karakolbazary.ui.aboutapp.AboutAppFragment"
        android:label="@string/menu_about_app"
        tools:layout="@layout/about_app_fragment" />

    <fragment
        android:id="@+id/nav_developers"
        android:name="com.example.karakolbazary.ui.developers.DevelopersFragment"
        android:label="@string/menu_developers"
        tools:layout="@layout/developers_fragment" />
</navigation>